--- a/crates/webrogue_backend_wasmtime/Cargo.toml
+++ b/crates/webrogue_backend_wasmtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "webrogue_wasmtime_backend"
+name = "webrogue_backend_wasmtime"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ wasmtime = { path = "../../external/wasmtime/crates/wasmtime" }
 wasmtime-c-api-impl = { path = "../../external/wasmtime/crates/c-api"}
 webrogue_runtime = { path = "../webrogue_runtime"}
 anyhow = { version = "1" }
+webrogue_macros = {path = "../webrogue_macros"}
