--- a/crates/webrogue_runtime/Cargo.toml
+++ b/crates/webrogue_runtime/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1" }
+
+# TODO no submodule
+wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log", "sync" ] }
+wiggle = { path = "../../external/wasmtime/crates/wiggle" }
+futures = "0.3"
