--- a/crates/webrogue_runtime/Cargo.toml
+++ b/crates/webrogue_runtime/Cargo.toml
@@ -10,7 +10,11 @@ anyhow = { version = "1" }
 wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log"] }
 wiggle = { path = "../../external/wasmtime/crates/wiggle", default-features = false }
 futures = "0.3"
-cap-rand = "3.1.0"
-cap-std = "3.1.0"
-cap-time-ext = "3.1.0"
-rustix = "0.38.34"
+cap-rand = "3.1"
+cap-std = "3.1"
+cap-time-ext = "3.1"
+cap-fs-ext = "3.1"
+system-interface = { version = "0.27", features = ["cap_std_impls"] }
+fs-set-times = "0.20"
+io-lifetimes = { version = "2.0", default-features = false }
+rustix = "0.38"
