--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["wasmtime", "sync"]
-wasmtime = ["dep:webrogue_backend_wasmtime"]
-wasm3 = ["dep:webrogue_backend_wasm3"]
-sync = ["dep:webrogue_wasi_sync"]
+default = ["backend_wasm3", "wasi_sync", "std_stream_sdl"]
+
+backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
+backend_wasm3 = ["dep:webrogue_backend_wasm3"]
+
+wasi_sync = ["dep:webrogue_wasi_sync"]
+
+std_stream_sdl = ["dep:webrogue_std_stream_sdl"]
+std_stream_os = ["dep:webrogue_std_stream_os"]
 
 [dependencies]
 webrogue_runtime = { path = "crates/webrogue_runtime" }
 anyhow = { version = "1" }
+clap = { version = "4.0", features = ["derive"] }
 
-# backends
 webrogue_backend_wasmtime = { path = "crates/webrogue_backend_wasmtime", optional = true }
 webrogue_backend_wasm3 = { path = "crates/webrogue_backend_wasm3", optional = true }
-
-# wasi
 webrogue_wasi_sync = { path = "crates/webrogue_wasi_sync", optional = true }
+webrogue_std_stream_sdl = { path = "crates/webrogue_std_stream_sdl", optional = true }
+webrogue_std_stream_os = { path = "crates/webrogue_std_stream_os", optional = true }
