--- a/crates/webrogue_std_stream_os/Cargo.toml
+++ b/crates/webrogue_std_stream_os/Cargo.toml
@@ -12,3 +12,4 @@ rustix = { version = "0.38.31", features = ["fs", "event"] }
 
 [target.'cfg(windows)'.dependencies]
 rustix = { version = "0.38.31", features = ["net"] }
+io-extras = "0.18.1"
