--- a/crates/webrogue_std_stream_sdl/Cargo.toml
+++ b/crates/webrogue_std_stream_sdl/Cargo.toml
@@ -16,3 +16,4 @@ rustix = { version = "0.38.31", features = ["fs", "event"] }
 
 [target.'cfg(windows)'.dependencies]
 rustix = { version = "0.38.31", features = ["net"] }
+io-extras = "0.18.1"
