--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_wasm3", "wasi_sync", "std_stream_os"]
+default = ["backend_wasmer_singlepass", "wasi_sync", "std_stream_os"]
 
 backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
+backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
+backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
+backend_wasmer_llvm = ["_backend_wasmer", "webrogue_backend_wasmer/llvm"]
 backend_wasm3 = ["dep:webrogue_backend_wasm3"]
 
 wasi_sync = ["dep:webrogue_wasi_sync"]
@@ -14,12 +17,15 @@ wasi_sync = ["dep:webrogue_wasi_sync"]
 std_stream_sdl = ["dep:webrogue_std_stream_sdl"]
 std_stream_os = ["dep:webrogue_std_stream_os"]
 
+_backend_wasmer = ["dep:webrogue_backend_wasmer"]
+
 [dependencies]
 webrogue_runtime = { path = "crates/webrogue_runtime" }
 anyhow = { version = "1" }
 clap = { version = "4.0", features = ["derive"] }
 
 webrogue_backend_wasmtime = { path = "crates/webrogue_backend_wasmtime", optional = true }
+webrogue_backend_wasmer = { path = "crates/webrogue_backend_wasmer", optional = true }
 webrogue_backend_wasm3 = { path = "crates/webrogue_backend_wasm3", optional = true }
 webrogue_wasi_sync = { path = "crates/webrogue_wasi_sync", optional = true }
 webrogue_std_stream_sdl = { path = "crates/webrogue_std_stream_sdl", optional = true }
