--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/wasmtime"]
 	path = external/wasmtime
 	url = https://github.com/webrogue-runtime/wasmtime.git
+[submodule "external/rust-sdl2"]
+	path = external/rust-sdl2
+	url = https://github.com/Rust-SDL2/rust-sdl2.git
