--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
 }
 
+apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
+
+def cargoProfile = "debug"
+
 android {
     namespace 'io.github.webrogue_runtime'
     compileSdk 34
@@ -21,6 +25,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ''
+                arguments "-DCARGO_PROFILE=${cargoProfile}"
             }
         }
     }
@@ -58,6 +63,21 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    tasks.whenTaskAdded { task ->
+        if ((task.name == 'javaPreCompileDebug' || task.name == 'javaPreCompileRelease')) {
+            task.dependsOn 'cargoBuild'
+        }
+        if (task.name =~ "buildCMake.*" ) {
+            task.dependsOn 'cargoBuild'
+        }
+    }
+    cargo {
+        pythonCommand = "python3"
+        profile = cargoProfile
+        module  = "src/main/cpp"
+        libname = "webrogue_android"
+        targets = ["arm", "x86", "arm64", "x86_64"]
+    }
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
@@ -82,7 +102,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
