--- a/crates/wasi_sync/Cargo.toml
+++ b/crates/wasi_sync/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-webrogue_runtime = { path = "../webrogue_runtime" }
+webrogue_runtime = { path = "../runtime" }
 wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log", "sync"] }
 cap-std = "3.1"
