--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,29 +4,31 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_wasmer_singlepass", "wasi_sync", "std_stream_sdl"]
+default = ["backend_v8", "wasi_sync", "std_stream_sdl"]
 
-backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
-backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
+backend_v8 = ["dep:webrogue_backend_v8"]
+backend_wasm3 = ["dep:webrogue_backend_wasm3"]
 backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
 backend_wasmer_llvm = ["_backend_wasmer", "webrogue_backend_wasmer/llvm"]
-backend_wasm3 = ["dep:webrogue_backend_wasm3"]
-
-wasi_sync = ["dep:webrogue_wasi_sync"]
+backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
+backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
 
 std_stream_sdl = ["dep:webrogue_std_stream_sdl"]
 std_stream_os = ["dep:webrogue_std_stream_os"]
 
+wasi_sync = ["dep:webrogue_wasi_sync"]
+
 _backend_wasmer = ["dep:webrogue_backend_wasmer"]
 
 [dependencies]
-webrogue_runtime = { path = "crates/webrogue_runtime" }
+webrogue_runtime = { path = "crates/runtime" }
 anyhow = { version = "1" }
 clap = { version = "4.0", features = ["derive"] }
 
-webrogue_backend_wasmtime = { path = "crates/webrogue_backend_wasmtime", optional = true }
-webrogue_backend_wasmer = { path = "crates/webrogue_backend_wasmer", optional = true }
-webrogue_backend_wasm3 = { path = "crates/webrogue_backend_wasm3", optional = true }
-webrogue_wasi_sync = { path = "crates/webrogue_wasi_sync", optional = true }
-webrogue_std_stream_sdl = { path = "crates/webrogue_std_stream_sdl", optional = true }
-webrogue_std_stream_os = { path = "crates/webrogue_std_stream_os", optional = true }
+webrogue_backend_v8 = { path = "crates/backend_v8", optional = true }
+webrogue_backend_wasm3 = { path = "crates/backend_wasm3", optional = true }
+webrogue_backend_wasmer = { path = "crates/backend_wasmer", optional = true }
+webrogue_backend_wasmtime = { path = "crates/backend_wasmtime", optional = true }
+webrogue_std_stream_os = { path = "crates/std_stream_os", optional = true }
+webrogue_std_stream_sdl = { path = "crates/std_stream_sdl", optional = true }
+webrogue_wasi_sync = { path = "crates/wasi_sync", optional = true }
