--- a/crates/backend_wasmtime/Cargo.toml
+++ b/crates/backend_wasmtime/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 wasmtime = { path = "../../external/wasmtime/crates/wasmtime" }
-webrogue_runtime = { path = "../webrogue_runtime"}
+webrogue_runtime = { path = "../runtime"}
 anyhow = { version = "1" }
-webrogue_macros = {path = "../webrogue_macros"}
+webrogue_macros = { path = "../macros" }
