--- a/platforms/android/app/src/main/AndroidManifest.xml
+++ b/platforms/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:name=".WebrogueActivity"
+            android:name=".WebrogueLauncherActivity"
             android:exported="true"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -67,25 +67,25 @@
          Example of setting SDL hints from AndroidManifest.xml:
         <meta-data android:name="SDL_ENV.SDL_ACCELEROMETER_AS_JOYSTICK" android:value="0"/>
         -->
-<!--        <activity-->
-<!--            android:name=".WebrogueActivity"-->
-<!--            android:alwaysRetainTaskState="true"-->
-<!--            android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"-->
-<!--            android:exported="true"-->
-<!--            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->
-<!--            &lt;!&ndash; Let Android know that we can handle some USB devices and should receive this event &ndash;&gt;-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />-->
-<!--            </intent-filter>-->
-<!--            &lt;!&ndash; Drop file event &ndash;&gt;-->
-<!--            &lt;!&ndash;-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.VIEW" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
-<!--                <data android:mimeType="*/*" />-->
-<!--            </intent-filter>-->
-<!--            &ndash;&gt;-->
-<!--        </activity>-->
+        <activity
+            android:name=".WebrogueActivity"
+            android:alwaysRetainTaskState="true"
+            android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+            android:exported="true"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <!-- Let Android know that we can handle some USB devices and should receive this event -->
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <!-- Drop file event -->
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            -->
+        </activity>
     </application>
 
 </manifest>
