--- a/platforms/android/app/src/main/rust/Cargo.toml
+++ b/platforms/android/app/src/main/rust/Cargo.toml
@@ -3,14 +3,13 @@ name = "webrogue_android"
 version = "0.1.0"
 edition = "2021"
 
-
 [lib]
 name = "webrogue_android"
 crate-type = ["staticlib"]
 
 [dependencies]
 anyhow = { version = "1" }
-webrogue_runtime = { path = "../../../../../../crates/webrogue_runtime" }
-webrogue_backend_wasm3 = { path = "../../../../../../crates/webrogue_backend_wasm3" }
-webrogue_wasi_sync = { path = "../../../../../../crates/webrogue_wasi_sync" }
-webrogue_std_stream_sdl = { path = "../../../../../../crates/webrogue_std_stream_sdl", default-features = false }
+webrogue_runtime = { path = "../../../../../../crates/runtime" }
+webrogue_backend_v8 = { path = "../../../../../../crates/backend_v8", default-features = false, features = ["v8_submodule"] }
+webrogue_wasi_sync = { path = "../../../../../../crates/wasi_sync" }
+webrogue_std_stream_sdl = { path = "../../../../../../crates/std_stream_sdl", default-features = false }
