--- a/crates/backend_v8/Cargo.toml
+++ b/crates/backend_v8/Cargo.toml
@@ -11,6 +11,6 @@ v8_submodule = ["dep:webrogue_backend_v8_src_submodule"]
 [dependencies]
 webrogue_runtime = { path = "../runtime"}
 anyhow = { version = "1" }
-webrogue_macros = { path = "../macros" }
+webrogue_backend_v8_macro = { path = "macro" }
 webrogue_backend_v8_src_crates_io = { path = "v8_src/crates_io", optional = true }
 webrogue_backend_v8_src_submodule = { path = "v8_src/submodule", optional = true }
