--- a/crates/backend_wasm3/Cargo.toml
+++ b/crates/backend_wasm3/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 webrogue_runtime = { path = "../runtime"}
 anyhow = { version = "1" }
 wasm3 = { git = "https://github.com/wasm3/wasm3-rs.git", default-features = false, features = ["build-bindgen", "std", "use-32bit-slots"] }
-webrogue_macros = { path = "../macros" }
+webrogue_backend_wasm3_macro = { path = "macro" }
