--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_v8", "wasi_sync", "std_stream_os"]
+default = ["backend_wasmtime", "wasi_sync", "std_stream_os"]
 
 backend_v8 = ["dep:webrogue_backend_v8"]
 backend_wasm3 = ["dep:webrogue_backend_wasm3"]
@@ -24,6 +24,8 @@ _backend_wasmer = ["dep:webrogue_backend_wasmer"]
 webrogue_runtime = { path = "crates/runtime" }
 anyhow = { version = "1" }
 clap = { version = "4.0", features = ["derive"] }
+webrogue_wasi = { path = "crates/wasi" }
+webrogue_gl = { path = "crates/gl" }
 
 webrogue_backend_v8 = { path = "crates/backend_v8", optional = true }
 webrogue_backend_wasm3 = { path = "crates/backend_wasm3", optional = true }
