--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_wasmtime", "wasi_sync", "std_stream_os"]
+default = ["backend_v8", "wasi_sync", "std_stream_os"]
 
 backend_v8 = ["dep:webrogue_backend_v8"]
-backend_wasm3 = ["dep:webrogue_backend_wasm3"]
 backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
 backend_wasmer_llvm = ["_backend_wasmer", "webrogue_backend_wasmer/llvm"]
 backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
@@ -28,7 +27,6 @@ webrogue_wasi = { path = "crates/wasi" }
 webrogue_gl = { path = "crates/gl" }
 
 webrogue_backend_v8 = { path = "crates/backend_v8", optional = true }
-webrogue_backend_wasm3 = { path = "crates/backend_wasm3", optional = true }
 webrogue_backend_wasmer = { path = "crates/backend_wasmer", optional = true }
 webrogue_backend_wasmtime = { path = "crates/backend_wasmtime", optional = true }
 webrogue_std_stream_os = { path = "crates/std_stream_os", optional = true }
