--- a/crates/wasi/defs.in
+++ b/crates/wasi/defs.in
@@ -1,13 +1,13 @@
-webrogue_func_wrap!{wasi_snapshot_preview1.args_get(u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.args_sizes_get(u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.proc_exit(u32) -> ()}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_close(u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_fdstat_get(u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_seek(u32, u64, u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_write(u32, u32, u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_fdstat_set_flags(u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_prestat_get(u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_prestat_dir_name(u32, u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.fd_read(u32, u32, u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.path_open(u32, u32, u32, u32, u32, u64, u64, u32, u32) -> (u32)}
-webrogue_func_wrap!{wasi_snapshot_preview1.poll_oneoff(u32, u32, u32, u32) -> (u32)}
+args_get(u32, u32) -> (u32)
+args_sizes_get(u32, u32) -> (u32)
+proc_exit(u32) -> ()
+fd_close(u32) -> (u32)
+fd_fdstat_get(u32, u32) -> (u32)
+fd_seek(u32, u64, u32, u32) -> (u32)
+fd_write(u32, u32, u32, u32) -> (u32)
+fd_fdstat_set_flags(u32, u32) -> (u32)
+fd_prestat_get(u32, u32) -> (u32)
+fd_prestat_dir_name(u32, u32, u32) -> (u32)
+fd_read(u32, u32, u32, u32) -> (u32)
+path_open(u32, u32, u32, u32, u32, u64, u64, u32, u32) -> (u32)
+poll_oneoff(u32, u32, u32, u32) -> (u32)
