gles2 subset support

--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -1,4 +1,105 @@
-glViewport(i32, i32, i32, i32) -> ()
-glClearColor(f32, f32, f32, f32) -> ()
-glClear(u32) -> ()
 present() -> ()
+glActiveTexture(u32) -> ()
+glAttachShader(u32, u32) -> ()
+glBindBuffer(u32, u32) -> ()
+glBindFramebuffer(u32, u32) -> ()
+glBindRenderbuffer(u32, u32) -> ()
+glBindTexture(u32, u32) -> ()
+glBlendColor(f32, f32, f32, f32) -> ()
+glBlendEquation(u32) -> ()
+glBlendEquationSeparate(u32, u32) -> ()
+glBlendFunc(u32, u32) -> ()
+glBlendFuncSeparate(u32, u32, u32, u32) -> ()
+glBufferData(u32, i32, u32, u32) -> ()
+glCheckFramebufferStatus(u32) -> (u32)
+glClear(u32) -> ()
+glClearColor(f32, f32, f32, f32) -> ()
+glClearDepthf(f32) -> ()
+glClearStencil(i32) -> ()
+glColorMask(u32, u32, u32, u32) -> ()
+glCompileShader(u32) -> ()
+glCopyTexImage2D(u32, i32, u32, i32, i32, i32, i32, i32) -> ()
+glCopyTexSubImage2D(u32, i32, i32, i32, i32, i32, i32, i32) -> ()
+glCreateProgram() -> (u32)
+glCreateShader(u32) -> (u32)
+glCullFace(u32) -> ()
+glDeleteProgram(u32) -> ()
+glDeleteShader(u32) -> ()
+glDepthFunc(u32) -> ()
+glDepthMask(u32) -> ()
+glDepthRangef(f32, f32) -> ()
+glDetachShader(u32, u32) -> ()
+glDisable(u32) -> ()
+glDisableVertexAttribArray(u32) -> ()
+glDrawArrays(u32, i32, i32) -> ()
+glEnable(u32) -> ()
+glEnableVertexAttribArray(u32) -> ()
+glFinish() -> ()
+glFlush() -> ()
+glFramebufferRenderbuffer(u32, u32, u32, u32) -> ()
+glFramebufferTexture2D(u32, u32, u32, u32, i32) -> ()
+glFrontFace(u32) -> ()
+glGenBuffers(i32, u32) -> ()
+glGenerateMipmap(u32) -> ()
+glGetAttribLocation(u32, u32) -> (i32)
+glGetError() -> (u32)
+glGetProgramInfoLog(u32, i32, u32, u32) -> ()
+glGetProgramiv(u32, u32, u32) -> ()
+glGetShaderInfoLog(u32, i32, u32, u32) -> ()
+glGetShaderiv(u32, u32, u32) -> ()
+glHint(u32, u32) -> ()
+glIsBuffer(u32) -> (u32)
+glIsEnabled(u32) -> (u32)
+glIsFramebuffer(u32) -> (u32)
+glIsProgram(u32) -> (u32)
+glIsRenderbuffer(u32) -> (u32)
+glIsShader(u32) -> (u32)
+glIsTexture(u32) -> (u32)
+glLineWidth(f32) -> ()
+glLinkProgram(u32) -> ()
+glPixelStorei(u32, i32) -> ()
+glPolygonOffset(f32, f32) -> ()
+glReleaseShaderCompiler() -> ()
+glRenderbufferStorage(u32, u32, i32, i32) -> ()
+glSampleCoverage(f32, u32) -> ()
+glScissor(i32, i32, i32, i32) -> ()
+glShaderSource(u32, i32, u32, u32) -> ()
+glStencilFunc(u32, i32, u32) -> ()
+glStencilFuncSeparate(u32, u32, i32, u32) -> ()
+glStencilMask(u32) -> ()
+glStencilMaskSeparate(u32, u32) -> ()
+glStencilOp(u32, u32, u32) -> ()
+glStencilOpSeparate(u32, u32, u32, u32) -> ()
+glTexParameterf(u32, u32, f32) -> ()
+glTexParameteri(u32, u32, i32) -> ()
+glUniform1f(i32, f32) -> ()
+glUniform1fv(i32, i32, u32) -> ()
+glUniform1i(i32, i32) -> ()
+glUniform1iv(i32, i32, u32) -> ()
+glUniform2f(i32, f32, f32) -> ()
+glUniform2fv(i32, i32, u32) -> ()
+glUniform2i(i32, i32, i32) -> ()
+glUniform2iv(i32, i32, u32) -> ()
+glUniform3f(i32, f32, f32, f32) -> ()
+glUniform3fv(i32, i32, u32) -> ()
+glUniform3i(i32, i32, i32, i32) -> ()
+glUniform3iv(i32, i32, u32) -> ()
+glUniform4f(i32, f32, f32, f32, f32) -> ()
+glUniform4fv(i32, i32, u32) -> ()
+glUniform4i(i32, i32, i32, i32, i32) -> ()
+glUniform4iv(i32, i32, u32) -> ()
+glUniformMatrix2fv(i32, i32, u32, u32) -> ()
+glUniformMatrix3fv(i32, i32, u32, u32) -> ()
+glUniformMatrix4fv(i32, i32, u32, u32) -> ()
+glUseProgram(u32) -> ()
+glValidateProgram(u32) -> ()
+glVertexAttrib1f(u32, f32) -> ()
+glVertexAttrib1fv(u32, u32) -> ()
+glVertexAttrib2f(u32, f32, f32) -> ()
+glVertexAttrib2fv(u32, u32) -> ()
+glVertexAttrib3f(u32, f32, f32, f32) -> ()
+glVertexAttrib3fv(u32, u32) -> ()
+glVertexAttrib4f(u32, f32, f32, f32, f32) -> ()
+glVertexAttrib4fv(u32, u32) -> ()
+glVertexAttribPointer(u32, i32, u32, u32, i32, u32) -> ()
+glViewport(i32, i32, i32, i32) -> ()
