--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -63,6 +63,7 @@ glReleaseShaderCompiler() -> ()
 glRenderbufferStorage(u32, u32, i32, i32) -> ()
 glSampleCoverage(f32, u32) -> ()
 glScissor(i32, i32, i32, i32) -> ()
+glShaderBinary(i32, u32, u32, u32, i32) -> ()
 glShaderSource(u32, i32, u32, u32) -> ()
 glStencilFunc(u32, i32, u32) -> ()
 glStencilFuncSeparate(u32, u32, i32, u32) -> ()
