--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,28 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_wasmtime", "wasi_sync", "std_stream_os"]
+default = ["backend_v8", "wasi_sync", "std_stream_os"]
 
 backend_v8 = ["dep:webrogue_backend_v8"]
 backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
 backend_wasmer_llvm = ["_backend_wasmer", "webrogue_backend_wasmer/llvm"]
 backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
 backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
+_backend_wasmer = ["dep:webrogue_backend_wasmer"]
 
 std_stream_sdl = ["dep:webrogue_std_stream_sdl"]
 std_stream_os = ["dep:webrogue_std_stream_os"]
 
 wasi_sync = ["dep:webrogue_wasi_sync"]
-
-_backend_wasmer = ["dep:webrogue_backend_wasmer"]
+gl = ["dep:webrogue_gl"]
 
 [dependencies]
 webrogue_runtime = { path = "crates/runtime" }
 anyhow = { version = "1" }
 clap = { version = "4.0", features = ["derive"] }
 webrogue_wasi = { path = "crates/wasi" }
-webrogue_gl = { path = "crates/gl" }
 
+webrogue_gl = { path = "crates/gl", optional = true }
 webrogue_backend_v8 = { path = "crates/backend_v8", optional = true }
 webrogue_backend_wasmer = { path = "crates/backend_wasmer", optional = true }
 webrogue_backend_wasmtime = { path = "crates/backend_wasmtime", optional = true }
