--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -1,6 +1,6 @@
-present() -> ()
 glActiveTexture(u32) -> ()
 glAttachShader(u32, u32) -> ()
+glBindAttribLocation(u32, u32, u32) -> ()
 glBindBuffer(u32, u32) -> ()
 glBindFramebuffer(u32, u32) -> ()
 glBindRenderbuffer(u32, u32) -> ()
@@ -47,6 +47,7 @@ glGetProgramInfoLog(u32, i32, u32, u32) -> ()
 glGetProgramiv(u32, u32, u32) -> ()
 glGetShaderInfoLog(u32, i32, u32, u32) -> ()
 glGetShaderiv(u32, u32, u32) -> ()
+glGetUniformLocation(u32, u32) -> (i32)
 glHint(u32, u32) -> ()
 glIsBuffer(u32) -> (u32)
 glIsEnabled(u32) -> (u32)
