--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["backend_v8", "wasi_sync", "std_stream_os"]
+default = ["backend_wasmtime", "wasi_sync", "std_stream_os", "gl"]
 
 backend_v8 = ["dep:webrogue_backend_v8"]
 backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
@@ -17,7 +17,9 @@ std_stream_sdl = ["dep:webrogue_std_stream_sdl"]
 std_stream_os = ["dep:webrogue_std_stream_os"]
 
 wasi_sync = ["dep:webrogue_wasi_sync"]
-gl = ["dep:webrogue_gl"]
+
+gl = ["_gfx", "dep:webrogue_gl"]
+_gfx = ["dep:webrogue_gfx"]
 
 [dependencies]
 webrogue_runtime = { path = "crates/runtime" }
@@ -26,6 +28,7 @@ clap = { version = "4.0", features = ["derive"] }
 webrogue_wasi = { path = "crates/wasi" }
 
 webrogue_gl = { path = "crates/gl", optional = true }
+webrogue_gfx = { path = "crates/gfx", optional = true }
 webrogue_backend_v8 = { path = "crates/backend_v8", optional = true }
 webrogue_backend_wasmer = { path = "crates/backend_wasmer", optional = true }
 webrogue_backend_wasmtime = { path = "crates/backend_wasmtime", optional = true }
