--- a/crates/gfx/Cargo.toml
+++ b/crates/gfx/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "webrogue_gl"
+name = "webrogue_gfx"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 webrogue_runtime = { path = "../runtime" }
-webrogue_gl_gen_macro = { path = "util_crates/macro" }
+sdl2 = { path = "../../external/rust-sdl2" }
