better gl and shared memory

--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -1,3 +1,5 @@
+glGetStringData(u32, u32) -> ()
+glGetStringLen(u32) -> (u32)
 glActiveTexture(u32) -> ()
 glAttachShader(u32, u32) -> ()
 glBindAttribLocation(u32, u32, u32) -> ()
@@ -11,6 +13,7 @@ glBlendEquationSeparate(u32, u32) -> ()
 glBlendFunc(u32, u32) -> ()
 glBlendFuncSeparate(u32, u32, u32, u32) -> ()
 glBufferData(u32, i32, u32, u32) -> ()
+glBufferSubData(u32, i32, i32, u32) -> ()
 glCheckFramebufferStatus(u32) -> (u32)
 glClear(u32) -> ()
 glClearColor(f32, f32, f32, f32) -> ()
@@ -18,13 +21,19 @@ glClearDepthf(f32) -> ()
 glClearStencil(i32) -> ()
 glColorMask(u32, u32, u32, u32) -> ()
 glCompileShader(u32) -> ()
+glCompressedTexImage2D(u32, i32, u32, i32, i32, i32, i32, u32) -> ()
+glCompressedTexSubImage2D(u32, i32, i32, i32, i32, i32, u32, i32, u32) -> ()
 glCopyTexImage2D(u32, i32, u32, i32, i32, i32, i32, i32) -> ()
 glCopyTexSubImage2D(u32, i32, i32, i32, i32, i32, i32, i32) -> ()
 glCreateProgram() -> (u32)
 glCreateShader(u32) -> (u32)
 glCullFace(u32) -> ()
+glDeleteBuffers(i32, u32) -> ()
+glDeleteFramebuffers(i32, u32) -> ()
 glDeleteProgram(u32) -> ()
+glDeleteRenderbuffers(i32, u32) -> ()
 glDeleteShader(u32) -> ()
+glDeleteTextures(i32, u32) -> ()
 glDepthFunc(u32) -> ()
 glDepthMask(u32) -> ()
 glDepthRangef(f32, f32) -> ()
@@ -32,6 +41,7 @@ glDetachShader(u32, u32) -> ()
 glDisable(u32) -> ()
 glDisableVertexAttribArray(u32) -> ()
 glDrawArrays(u32, i32, i32) -> ()
+glDrawElements(u32, i32, u32, u32) -> ()
 glEnable(u32) -> ()
 glEnableVertexAttribArray(u32) -> ()
 glFinish() -> ()
@@ -40,14 +50,35 @@ glFramebufferRenderbuffer(u32, u32, u32, u32) -> ()
 glFramebufferTexture2D(u32, u32, u32, u32, i32) -> ()
 glFrontFace(u32) -> ()
 glGenBuffers(i32, u32) -> ()
+glGenFramebuffers(i32, u32) -> ()
+glGenRenderbuffers(i32, u32) -> ()
+glGenTextures(i32, u32) -> ()
 glGenerateMipmap(u32) -> ()
+glGetActiveAttrib(u32, u32, i32, u32, u32, u32, u32) -> ()
+glGetActiveUniform(u32, u32, i32, u32, u32, u32, u32) -> ()
+glGetAttachedShaders(u32, i32, u32, u32) -> ()
 glGetAttribLocation(u32, u32) -> (i32)
+glGetBooleanv(u32, u32) -> ()
+glGetBufferParameteriv(u32, u32, u32) -> ()
 glGetError() -> (u32)
+glGetFloatv(u32, u32) -> ()
+glGetFramebufferAttachmentParameteriv(u32, u32, u32, u32) -> ()
+glGetIntegerv(u32, u32) -> ()
 glGetProgramInfoLog(u32, i32, u32, u32) -> ()
 glGetProgramiv(u32, u32, u32) -> ()
+glGetRenderbufferParameteriv(u32, u32, u32) -> ()
 glGetShaderInfoLog(u32, i32, u32, u32) -> ()
+glGetShaderPrecisionFormat(u32, u32, u32, u32) -> ()
+glGetShaderSource(u32, i32, u32, u32) -> ()
 glGetShaderiv(u32, u32, u32) -> ()
+glGetTexParameterfv(u32, u32, u32) -> ()
+glGetTexParameteriv(u32, u32, u32) -> ()
 glGetUniformLocation(u32, u32) -> (i32)
+glGetUniformfv(u32, i32, u32) -> ()
+glGetUniformiv(u32, i32, u32) -> ()
+glGetVertexAttribPointerv(u32, u32, u32) -> ()
+glGetVertexAttribfv(u32, u32, u32) -> ()
+glGetVertexAttribiv(u32, u32, u32) -> ()
 glHint(u32, u32) -> ()
 glIsBuffer(u32) -> (u32)
 glIsEnabled(u32) -> (u32)
@@ -60,6 +91,7 @@ glLineWidth(f32) -> ()
 glLinkProgram(u32) -> ()
 glPixelStorei(u32, i32) -> ()
 glPolygonOffset(f32, f32) -> ()
+glReadPixels(i32, i32, i32, i32, u32, u32, u32) -> ()
 glReleaseShaderCompiler() -> ()
 glRenderbufferStorage(u32, u32, i32, i32) -> ()
 glSampleCoverage(f32, u32) -> ()
@@ -72,8 +104,12 @@ glStencilMask(u32) -> ()
 glStencilMaskSeparate(u32, u32) -> ()
 glStencilOp(u32, u32, u32) -> ()
 glStencilOpSeparate(u32, u32, u32, u32) -> ()
+glTexImage2D(u32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
 glTexParameterf(u32, u32, f32) -> ()
+glTexParameterfv(u32, u32, u32) -> ()
 glTexParameteri(u32, u32, i32) -> ()
+glTexParameteriv(u32, u32, u32) -> ()
+glTexSubImage2D(u32, i32, i32, i32, i32, i32, u32, u32, u32) -> ()
 glUniform1f(i32, f32) -> ()
 glUniform1fv(i32, i32, u32) -> ()
 glUniform1i(i32, i32) -> ()
