--- a/crates/wasi/defs.in
+++ b/crates/wasi/defs.in
@@ -11,3 +11,5 @@ fd_prestat_dir_name(u32, u32, u32) -> (u32)
 fd_read(u32, u32, u32, u32) -> (u32)
 path_open(u32, u32, u32, u32, u32, u64, u64, u32, u32) -> (u32)
 poll_oneoff(u32, u32, u32, u32) -> (u32)
+clock_time_get(u32, u64, u32) -> (u32)
+sched_yield() -> (u32)
