--- a/crates/wasi/defs.in
+++ b/crates/wasi/defs.in
@@ -1,15 +1,15 @@
-args_get(u32, u32) -> (u32)
-args_sizes_get(u32, u32) -> (u32)
-proc_exit(u32) -> ()
-fd_close(u32) -> (u32)
-fd_fdstat_get(u32, u32) -> (u32)
-fd_seek(u32, u64, u32, u32) -> (u32)
-fd_write(u32, u32, u32, u32) -> (u32)
-fd_fdstat_set_flags(u32, u32) -> (u32)
-fd_prestat_get(u32, u32) -> (u32)
-fd_prestat_dir_name(u32, u32, u32) -> (u32)
-fd_read(u32, u32, u32, u32) -> (u32)
-path_open(u32, u32, u32, u32, u32, u64, u64, u32, u32) -> (u32)
-poll_oneoff(u32, u32, u32, u32) -> (u32)
-clock_time_get(u32, u64, u32) -> (u32)
-sched_yield() -> (u32)
+args_get(i32, i32) -> (i32)
+args_sizes_get(i32, i32) -> (i32)
+proc_exit(i32) -> ()
+fd_close(i32) -> (i32)
+fd_fdstat_get(i32, i32) -> (i32)
+fd_seek(i32, i64, i32, i32) -> (i32)
+fd_write(i32, i32, i32, i32) -> (i32)
+fd_fdstat_set_flags(i32, i32) -> (i32)
+fd_prestat_get(i32, i32) -> (i32)
+fd_prestat_dir_name(i32, i32, i32) -> (i32)
+fd_read(i32, i32, i32, i32) -> (i32)
+path_open(i32, i32, i32, i32, i32, i64, i64, i32, i32) -> (i32)
+poll_oneoff(i32, i32, i32, i32) -> (i32)
+clock_time_get(i32, i64, i32) -> (i32)
+sched_yield() -> (i32)
