--- a/crates/wasi/defs.in
+++ b/crates/wasi/defs.in
@@ -1,15 +1,46 @@
 args_get(i32, i32) -> (i32)
 args_sizes_get(i32, i32) -> (i32)
-proc_exit(i32) -> ()
+environ_get(i32, i32) -> (i32)
+environ_sizes_get(i32, i32) -> (i32)
+clock_res_get(i32, i32) -> (i32)
+clock_time_get(i32, i64, i32) -> (i32)
+fd_advise(i32, i64, i64, i32) -> (i32)
+fd_allocate(i32, i64, i64) -> (i32)
 fd_close(i32) -> (i32)
+fd_datasync(i32) -> (i32)
 fd_fdstat_get(i32, i32) -> (i32)
-fd_seek(i32, i64, i32, i32) -> (i32)
-fd_write(i32, i32, i32, i32) -> (i32)
 fd_fdstat_set_flags(i32, i32) -> (i32)
+fd_fdstat_set_rights(i32, i64, i64) -> (i32)
+fd_filestat_get(i32, i32) -> (i32)
+fd_filestat_set_size(i32, i64) -> (i32)
+fd_filestat_set_times(i32, i64, i64, i32) -> (i32)
+fd_pread(i32, i32, i32, i64, i32) -> (i32)
 fd_prestat_get(i32, i32) -> (i32)
 fd_prestat_dir_name(i32, i32, i32) -> (i32)
+fd_pwrite(i32, i32, i32, i64, i32) -> (i32)
 fd_read(i32, i32, i32, i32) -> (i32)
+fd_readdir(i32, i32, i32, i64, i32) -> (i32)
+fd_renumber(i32, i32) -> (i32)
+fd_seek(i32, i64, i32, i32) -> (i32)
+fd_sync(i32) -> (i32)
+fd_tell(i32, i32) -> (i32)
+fd_write(i32, i32, i32, i32) -> (i32)
+path_create_directory(i32, i32, i32) -> (i32)
+path_filestat_get(i32, i32, i32, i32, i32) -> (i32)
+path_filestat_set_times(i32, i32, i32, i32, i64, i64, i32) -> (i32)
+path_link(i32, i32, i32, i32, i32, i32, i32) -> (i32)
 path_open(i32, i32, i32, i32, i32, i64, i64, i32, i32) -> (i32)
+path_readlink(i32, i32, i32, i32, i32, i32) -> (i32)
+path_remove_directory(i32, i32, i32) -> (i32)
+path_rename(i32, i32, i32, i32, i32, i32) -> (i32)
+path_symlink(i32, i32, i32, i32, i32) -> (i32)
+path_unlink_file(i32, i32, i32) -> (i32)
 poll_oneoff(i32, i32, i32, i32) -> (i32)
-clock_time_get(i32, i64, i32) -> (i32)
+proc_exit(i32) -> ();
+proc_raise(i32) -> (i32)
 sched_yield() -> (i32)
+random_get(i32, i32) -> (i32)
+sock_accept(i32, i32, i32) -> (i32)
+sock_recv(i32, i32, i32, i32, i32, i32) -> (i32)
+sock_send(i32, i32, i32, i32, i32) -> (i32)
+sock_shutdown(i32, i32) -> (i32)
