--- a/crates/gl/Cargo.toml
+++ b/crates/gl/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 webrogue_runtime = { path = "../runtime" }
 webrogue_gl_gen_macro = { path = "util_crates/macro" }
+webrogue_gfx = { path = "../gfx" }
