--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ webrogue_std_stream_os = { path = "crates/std_stream_os", optional = true }
 webrogue_std_stream_sdl = { path = "crates/std_stream_sdl", optional = true }
 webrogue_wasi_sync = { path = "crates/wasi_sync", optional = true }
 
-[target.'cfg(target_os = "macos")'.dependencies]
+[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 webrogue_gl = { path = "crates/gl", optional = true, features = ["sdl_static", "sdl_bundled"] }
 
-[target.'cfg(not(target_os = "macos"))'.dependencies]
+[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
 webrogue_gl = { path = "crates/gl", optional = true, features = [] }
