--- a/web/CMakeLists.txt
+++ b/web/CMakeLists.txt
@@ -44,5 +44,5 @@ target_link_options(
     -sWASM_BIGINT
     # -sFETCH 
     # --js-library ${CMAKE_CURRENT_LIST_DIR}/game/vmlib.js 
-    "-sASYNCIFY_IMPORTS=[wr_em_js_initWasmModule, wr_em_js_execFunc, wr_em_js_continueFuncExecution, wr_em_js_readModMem, wr_em_js_writeModMem]"
+    "-sASYNCIFY_IMPORTS=[wr_em_js_initWasmModule, wr_em_js_waitForStatus, wr_em_js_readModMem, wr_em_js_writeModMem]"
 )
