--- a/crates/gl/defs.in
+++ b/crates/gl/defs.in
@@ -1,5 +1,6 @@
 glGetStringData(u32, u32) -> ()
 glGetStringLen(u32) -> (i32)
+init_ptrs() -> ()
 glActiveTexture(u32) -> ()
 glAttachShader(u32, u32) -> ()
 glBindAttribLocation(u32, u32, u32) -> ()
