--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["staticlib"]
 
 [features]
 default = ["gl"]
-gl = ["dep:webrogue_gl", "dep:webrogue_gfx"]
+gl = ["dep:webrogue_gl", "dep:webrogue_gfx", "dep:webrogue_gfx_ffi"]
 
 [dependencies]
 webrogue_runtime = { path = "../crates/runtime" }
@@ -19,3 +19,4 @@ anyhow = { version = "1" }
 webrogue_wasi = { path = "../crates/wasi" }
 webrogue_gl = { path = "../crates/gl", optional = true }
 webrogue_gfx = { path = "../crates/gfx", optional = true }
+webrogue_gfx_ffi = { path = "../crates/gfx_ffi", optional = true }
