--- a/crates/wrapp/Cargo.toml
+++ b/crates/wrapp/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
 anyhow = { version = "1" }
 zstd-seekable = { version = "0.1.23" }
