get rid of cmake on ios

--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -1,7 +1,6 @@
-/cmake_build
-/target
+.DS_Store
 /Cargo.lock
-/artifacts
-/build
-/external/SDL-release-*.zip
-/external/SDL
+/external/SDL2.zip
+/external/SDL2
+*.xcuserstate
+xcuserdata
